@@ -1,3 +1,5 @@
+2931 [Logger]               improved error handling
+     [Main]                 delete orphaned source detector log files at startup
 2930 [Progress Window]      improved the job progress window in several ways. major ones are:
                             - processing rate got renamed to speed and is now also showing the current speed
                             - the current speed is used to calculate the remaining time
